<?xml version="1.0"?>
<package format="2">
  <name>multi_point_nav</name>
  <version>0.1.0</version>
  <description>The multi_point_nav package</description>
  <maintainer email="chenlinkai@gaitech.net">Leo Chen</maintainer> 
  <license>GNU</license>  
  <buildtool_depend>catkin</buildtool_depend> 
  <export>
  </export>
<build_depend>rospy</build_depend>
<build_depend>actionlib</build_depend>
<build_depend>actionlib_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_depend>move_base_msgs</build_depend>
<build_export_depend>rospy</build_export_depend>
<build_export_depend>actionlib</build_export_depend>
<build_export_depend>actionlib_msgs</build_export_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<build_export_depend>move_base_msgs</build_export_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>actionlib</exec_depend>
<exec_depend>actionlib_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>move_base_msgs</exec_depend>
</package>